mule-user-guide/v/3.2/cxf-module-reference.adoc
=  CXF模块参考

== 介绍

Mule CXF模块通过 http://incubator.apache.org/cxf/[Apache CXF]提供对Web服务集成的支持。 Apache CXF是一个开源服务框架，可帮助您使用前端编程API（如JAX-WS）构建和开发服务。

== 使用CXF模块

使用以下链接可获得有关在实施Mule时配置和使用CXF传输的信息。

*Building and Consuming Services*

*  link:/mule-user-guide/v/3.2/cxf-module-overview[概观]
*  link:/mule-user-guide/v/3.2/building-web-services-with-cxf[构建Web服务]
*  link:/mule-user-guide/v/3.2/consuming-web-services-with-cxf[消费Web服务]
*  link:/mule-user-guide/v/3.2/proxying-web-services-with-cxf[代理Web服务]
*  link:/mule-user-guide/v/3.2/using-http-get-requests[使用HTTP GET请求]
*  link:/mule-user-guide/v/3.2/bookstore-example[书店例子]
*  link:/mule-user-guide/v/3.2/cxf-module-configuration-reference[配置参考]
*  link:/mule-user-guide/v/3.2/wsdl-connectors[使用WSDL连接器]
*  link:/mule-user-guide/v/3.2/upgrading-cxf-from-mule-2[从Mule升级CXF 2]

*Web Service Standards*

*  link:/mule-user-guide/v/3.2/supported-web-service-standards[支持的Web服务标准]
*  link:/mule-user-guide/v/3.2/using-mtom[使用MTOM]
*  link:/mule-user-guide/v/3.2/enabling-ws-addressing[启用WS-Addressing]
*  link:/mule-user-guide/v/3.2/enabling-ws-security[启用WS-Security]
CXF网站上的*  http://cxf.apache.org/docs/ws-trust.html[WS-信托]， http://cxf.apache.org/docs/ws-secureconversation.html[WS-SecureConversation的]和 http://cxf.apache.org/docs/ws-securitypolicy.html[WS-SECURITYPOLICY]

== 故障处理

本节包含使用CXF传输时可能遇到的常见问题和解决方案。

*I've received a "java.lang.IllegalArgumentException: wrong number of arguments" when using the CXF outbound endpoint*

CXF出站端点使用为客户端生成的CXF发送消息。因此，您的消息负载必须与正在调用的操作的签名相匹配。当有效载荷与签名不匹配时会导致此错误。

这是一个例子。如果你有这样的客户端操作：

[source, java, linenums]
----
public void sendData(String data1, String data2, String data3);
----

您的消息负载必须如下所示：

[source, code, linenums]
----
Object payload = new Object[] { "data1", "data2", "data3" };
----

*My WSDL does not have the correct service address (i.e. its localhost instead of foo.com)*

如果您在进行WSDL优先开发，请确保您的服务实现上的@WebService注释具有正确的名称，serviceName，targetNamespace和portName属性。如果这些不正确，CXF将无法导航您的WSDL，找到该地址，并将其替换为当前正在使用的地址。

您的WebService注释应如下所示：

[source, java, linenums]
----
@WebService(name = "YourWSDLPortType",
            serviceName = "YourServiceName",
            portName = "YourPortName",
            targetNamespace = "http://your-namespace",
            endpointInterface = "your.endpoint.Interface",
            wsdlLocation = "your.wsdl")
----
